levels added in arraylist